--- a/src/style.css
+++ b/src/style.css
@@ -38,30 +38,25 @@ nav ul li a {
   color: #007bff;
 }
 
-.container {
+.intro, .action-container {
+  max-width: 900px;
+  margin: 50px auto 0; /* Adjusted top margin */
+  padding: 20px;
+  background: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
-  justify-content: space-between;
-  max-width: 70em;
-  margin: auto;
-  margin-top: 30px; /* Adjust based on header height */
-  margin-bottom: 30px;
+  justify-content: space-between; /* For action-container */
+  align-items: center;
+}
+
+.container {
+  max-width: 900px;
+  margin: 50px auto; /* Adjusted top margin and added bottom margin */
   background: white;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.intro {
-  max-width: 70em;
-  margin: auto;
-  margin-top: 30px; /* Adjust for fixed header */
-  padding: 20px;
-  background: white;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  font-size: 16px;
-}
-
-.left-column, .right-column {
-  width: 48%;
+  display: flex;
+  flex-direction: column;
 }
 
 textarea {
@@ -70,6 +65,7 @@ textarea {
   font-family: "Lucida Console", Courier, monospace;
   width: 100%;
   height: 500px;
+  margin: 20px 0; /* Added margin for spacing */
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -87,15 +83,11 @@ footer {
 }
 
 @media (max-width: 768px) {
-  .container {
+  .intro, .action-container, .container {
       flex-direction: column;
   }
 
-  .left-column, .right-column {
-      width: 100%;
-  }
-
-  .intro, .container {
-      margin-top: 260px; /* Adjust for smaller header */
+  .intro, .action-container {
+      margin-top: 210px; /* Adjust for smaller header */
   }
 }
