--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
+  align-self: center;
 }
 
 nav ul li {
@@ -64,7 +65,7 @@ textarea {
   color: white;
   font-family: "Lucida Console", Courier, monospace;
   width: 100%;
-  height: 500px;
+  height: 300px;
   margin: 20px 0; /* Added margin for spacing */
   padding: 10px;
   border: 1px solid #ddd;
